# GameServer

etc/: config.node1  config.node2  runconfig.lua
lualib/: service.lua
proto/: login.proto
service/: Pmain.lua  main.lua
service/admin/: init.lua
service/agent/: init.lua  scene.lua
service/agentmgr/: init.lua
service/gateway/: init.lua
service/login/: init.lua
service/nodemgr/: init.lua
service/scene/: init.lua
skynet/3rd/lua/: lua  luac
skynet/examples/: Pclient.lua
storage/: playerdata.pb  playerdata.proto
sunnet/: CMakeLists.txt  CMakeSettings.json  Msg.h  Worker.cpp  Worker.h  main.cpp  sunnet.cpp  sunnet.h
sunnet/include/: Conn.h  Msg.h  Service.h  SocketWorker.h  Sunnet.h  Worker.h
sunnet/src/: Service.cpp  SocketWorker.cpp  Sunnet.cpp  Worker.cpp  main.cpp
